package de.muenchen.kobit.backend.additional.pagecontent.model;

public enum PageType {
    DOWNLOADS,
    FAQ,
    GLOSSARY,
    PREVENTION,
    DV_FAIR,
    NAVIGATOR,
    LEADERSHIP,
    PRIVACY_POLICY
}
